# Pythonator

./: CREDITS.md  README.md
app/app/: build.gradle
app/app/src/main/: AndroidManifest.xml
app/app/src/main/java/com/python/pythonator/: MainActivity.java
app/app/src/main/java/com/python/pythonator/backend/: BtClient.java  QueueRepository.java  Server.java
app/app/src/main/java/com/python/pythonator/backend/bluetooth/: BluetoothClient.java  BluetoothServer.java  ConnectListener.java  SendListener.java  connectListener.java
app/app/src/main/java/com/python/pythonator/backend/connection/: BluetoothListener.java  ConnectListener.java  ConnectState.java
app/app/src/main/java/com/python/pythonator/structures/: Image.java  ImageQueueItem.java  QueueItem.java
app/app/src/main/java/com/python/pythonator/ui/capture/: Capture.java
app/app/src/main/java/com/python/pythonator/util/: FileUtil.java  ListUtil.java  ThreadUtil.java  UriUtil.java
app/app/src/main/res/drawable/: ic_back.xml  ic_bluetooth_connected.xml  ic_bluetooth_disabled.xml  ic_bluetooth_searching.xml  ic_check.xml  ic_location_disabled.xml  ic_out_of_range.xml  ic_settings.xml  ic_snake.xml  ic_sort.xml
app/app/src/main/res/drawable-v24/: ic_add.xml  ic_delete.xml
app/app/src/main/res/layout/: activity_main.xml  activity_settings.xml  dialog_permission.xml  fragment_main.xml  fragment_queue.xml  image_queue.xml  item_image.xml
app/app/src/main/res/menu/: main_menu.xml  menu_ok.xml
app/app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/app/src/main/res/xml/: app_paths.xml  file_paths.xml
bot/: README.md  avr-atmega328p-cross.ini  meson.build  meson_options.txt
bot/scripts/: extract_outline.py  line_test.py
bot/src/: command.h  main.c  pen.c  pen.h  pinout.h  serial.c  serial.h  status.h  stepper.c  stepper.h
controller/: Makefile  README  README.md  avr-atmega2560-cross.ini  avr-atmega328p-cross.ini  line_test.py  meson.build  meson_options.txt
controller-test/: README.md  main.cpp
controller/include/bluetooth/: server.hpp
controller/include/bot/: bitprinter.hpp  command.hpp  controller.hpp  device.hpp  printer.hpp
controller/include/config/: config.hpp  except.hpp  parser.hpp  values.hpp  writer.hpp
controller/include/error/: exceptions.hpp  logging.hpp
controller/include/image/: coordinate.hpp  processor.hpp
controller/include/utils/: queuelock.hpp  strings.hpp
controller/setup/: enable_bluetooth.sh
controller/setup/config/: controller.cfg
controller/src/: main.c  main.cpp  pins.h  serial.c  serial.h
controller/src/bluetooth/: server.cpp
controller/src/bot/: bitprinter.cpp  command.cpp  controller.cpp  device.cpp  printer.cpp
controller/src/config/: config.cpp  except.cpp  parser.cpp  values.cpp  writer.cpp
controller/src/error/: exceptions.cpp  logging.cpp
controller/src/image/: processor.cpp
controller/src/utils/: queuelock.cpp
doc/: serial_protocol.md
dxf2ptn/: dxf2ptn.py  pythonator.py
ptncom/: .gitignore  Makefile  ptncom.c  test.ptn
simulator/: meson.build
simulator/src/: Pythonator.h  Renderer.cpp  Renderer.h  Simulator.cpp  Simulator.h  Utility.h  main.cpp
simulator/src/graphics/: DynamicBuffer.h  Shader.cpp  Shader.h  VertexArray.h
simulator/src/math/: Mat.h  Vec.h
simulator/subprojects/glad/: meson.build
simulator/subprojects/glad/include/glad/: glad.h
simulator/subprojects/glad/src/: glad.cpp
(+70 files in other folders)
